--- a/.github/workflows/app-domain.yml
+++ b/.github/workflows/app-domain.yml
@@ -18,17 +18,11 @@ jobs:
       - name: Install Certbot
         run: sudo apt-get update && sudo apt-get install -y certbot
 
-      - name: Prepare Hooks
-        run: |
-          chmod +x ./hooks/manual-auth-hook.sh
-          chmod +x ./hooks/manual-cleanup-hook.sh
-
       - name: Obtain Let's Encrypt Wildcard Certificate
         env:
           EMAIL: ${{ secrets.HEROKU_USER_EMAIL }}
           DOMAIN: ${{ secrets.HEROKU_APP_DOMAIN }}
         run: |
-          ls -la /github/workspace
           sudo certbot certonly \
             --manual \
             --preferred-challenges=dns \
@@ -37,8 +31,12 @@ jobs:
             --agree-tos -d "$DOMAIN" \
             --manual-public-ip-logging-ok \
             --non-interactive \
-            --manual-auth-hook "/github/workspace/hooks/manual-auth-hook.sh" \
-            --manual-cleanup-hook "/github/workspace/hooks/manual-cleanup-hook.sh"
+            --manual-auth-hook "${{ github.workspace }}/hooks/manual-auth-hook.sh" \
+            --manual-cleanup-hook "${{ github.workspace }}/hooks/manual-cleanup-hook.sh"
+
+      - name: Wait for DNS Propagation
+        if: always()
+        run: sleep 300 # Wait for 5 minutes
 
       - name: Install Heroku CLI
         run: curl https://cli-assets.heroku.com/install.sh | sh
