--- a/.github/workflows/app-domain.yml
+++ b/.github/workflows/app-domain.yml
@@ -22,6 +22,9 @@ jobs:
         env:
           EMAIL: ${{ secrets.HEROKU_USER_EMAIL }}
           DOMAIN: ${{ secrets.HEROKU_APP_DOMAIN }}
+          NAMECHEAP_API_KEY: ${{ secrets.NAMECHEAP_API_KEY }}
+          NAMECHEAP_API_USER: ${{ secrets.NAMECHEAP_API_USER }}
+          NAMECHEAP_CLIENT_IP: ${{ secrets.NAMECHEAP_API_IP }}
         run: |
           sudo certbot certonly \
             --manual \
@@ -33,10 +36,6 @@ jobs:
             --non-interactive \
             --manual-auth-hook "${{ github.workspace }}/hooks/manual-auth-hook.sh" \
             --manual-cleanup-hook "${{ github.workspace }}/hooks/manual-cleanup-hook.sh"
-
-      - name: Wait for DNS Propagation
-        if: always()
-        run: sleep 300 # Wait for 5 minutes
 
       - name: Install Heroku CLI
         run: curl https://cli-assets.heroku.com/install.sh | sh
